viewing group in GSE